tests/parser/syntax-errors/comparisons-are-not-associative/comparison_ops_nonassoc_eq_eq.choc
# RUN: choco-opt "%s" | filecheck "%s"

1 == 1 == 1

# CHECK:      SyntaxError (line 3, column 8): Comparison operators are not associative.
# CHECK-NEXT: >>>1 == 1 == 1
# CHECK-NEXT: >>>-------^
